<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.dg.mdsrose</groupId>
  <artifactId>mds-rose</artifactId>
  <packaging>jar</packaging>
  <version>1.0.0-SNAPSHOT</version>
  <name>mds-rose</name>

  <properties>
    <java.version>23</java.version>
    <sqlite-jdbc.version>3.47.2.0</sqlite-jdbc.version>
    <liquibase.version>4.30.0</liquibase.version>
    <mindrot.version>0.4</mindrot.version>
    <junit.version>5.11.4</junit.version>
    <jfreechart.version>1.5.3</jfreechart.version>
    <maven.compiler.source>23</maven.compiler.source>
    <maven.compiler.target>23</maven.compiler.target>
  </properties>

  <dependencies>
    <!-- MDSJ ALGO -->
    <dependency>
      <groupId>mdjs</groupId>
      <artifactId>mdjs</artifactId>
      <version>1.0</version>
      <scope>system</scope>
      <systemPath>${pom.basedir}/lib/mdsj.jar</systemPath>
    </dependency>

    <!-- INTELLIJ FORM DESIGNER -->
    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>forms_rt</artifactId>
      <version>1.0</version>
      <scope>system</scope>
      <systemPath>${pom.basedir}/lib/forms_rt.jar</systemPath>
    </dependency>

    <!-- DATABASE -->
    <dependency>
      <groupId>org.xerial</groupId>
      <artifactId>sqlite-jdbc</artifactId>
      <version>${sqlite-jdbc.version}</version>
    </dependency>
    <dependency>
      <groupId>org.liquibase</groupId>
      <artifactId>liquibase-core</artifactId>
      <version>${liquibase.version}</version>
    </dependency>

    <!-- UTILS -->
    <dependency>
      <groupId>org.mindrot</groupId>
      <artifactId>jbcrypt</artifactId>
      <version>${mindrot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jfree</groupId>
      <artifactId>jfreechart</artifactId>
      <version>${jfreechart.version}</version>
    </dependency>

    <!-- TESTING -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.liquibase</groupId>
        <artifactId>liquibase-maven-plugin</artifactId>
        <version>${liquibase.version}</version>
        <configuration>
          <propertyFile>src/main/resources/db/liquibase.properties</propertyFile>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
